# motd-rs

./: Cargo.toml  config.toml
.github/workflows/: main.yml
src/: command.rs  main.rs  tools.rs
src/components/: component.rs  disk.rs  docker.rs  last_login.rs  memory.rs  mod.rs  network.rs  service_status.rs  system.rs
