[package]
name = "motd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.16.1"
byte-unit = "5.1.4"
clap = { version = "4.5.6", features = ["derive"] }
comfy-table = "7.1.1"
csscolorparser = "0.6.2"
humantime = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
sysinfo = "0.30.12"
termion = "4.0.0"
thiserror = "1.0.61"
toml = "0.8.14"
unicode-width = "0.1.13"
